# rsp

./: .gitignore  Cargo.toml  README.md  test.lisp  test2.lisp
examples/: factorial.lisp  hello_world.lisp  my_math_lib.lisp  my_program.lisp  simple_math.lisp  use_my_lib.lisp
src/: ast.rs  builtins.rs  cli.rs  env.rs  eval.rs  logging.rs  main.rs  parser.rs  special_forms.rs  test_utils.rs
src/engine/: ast.rs  builtins.rs  env.rs  eval.rs  mod.rs  parser.rs  special_forms.rs
src/engine/builtins/: globals.rs  mod.rs
src/engine/builtins/list/: mod.rs
src/engine/builtins/log/: mod.rs
src/engine/builtins/math/: mod.rs
src/engine/builtins/special_forms/: fn_form.rs  if_form.rs  let_form.rs  mod.rs  quote_form.rs  require_form.rs
src/engine/builtins/string/: mod.rs
src/repl/: highlighter.rs  history.rs  mod.rs
