[package]
name = "rsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["cargo", "derive", "string", "env"] }
nom = "8.0.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19.0" # Added for lazy static
rustyline = "14.0.0" # For REPL line editing, history, and signal handling
dirs = "5.0.1" # For finding standard directory paths
regex = "1.10.5" # For syntax highlighting tokenization
lazy_static = "1.5.0" # For compiling regexes once

[dev-dependencies]
tempfile = "3.10.1"
predicates = "3.1.0" # For more expressive assertions in tests
assert_cmd = "2.0.14" # For testing CLI applications
